# aorta_personalization

./: pyproject.toml
paper/: forward.py  inverse.py  make_figures.py  meshes.py  noise.py  problems.py  tracking.py
paper/pfiles/: forward_centerline_constrained.py  inverse_parameter_estimation.py  traicking.py
src/aorta_personalization/centerline/: api.py
src/aorta_personalization/material/: _types.py  types.py
src/aorta_personalization/mesh/: _aorta.py  _centerline.py  _cylinder.py  _generation.py  _topology.py  _types.py  _validation.py  _variables.py  api.py  types.py
src/aorta_personalization/prep/: __init__.py  _cl_variables.py  _cmd.py  _fields.py  _reference_data.py  _setup.py  _tools.py  _types.py  api.py  types.py
src/aorta_personalization/prep/_postprocessing/: __init__.py  _forward.py  _inverse.py  _reference_data.py  _types.py
src/aorta_personalization/problem/: __init__.py  _bcs.py  _centerline.py  _constraint.py  _expressions.py  _material.py  _motion.py  _pressure.py  _reference.py  _types.py  api.py  types.py
src/aorta_personalization/rigidbody/: api.py
src/aorta_personalization/solid/: _problem.py  _types.py  _variables.py  api.py  types.py
src/aorta_personalization/topology/: _tet.py  _types.py  api.py  types.py
